syntax = "proto3";

package proto.indrasaputra.shortener.v1;

option go_package = "github.com/indrasaputra/url-shortener/proto/indrasaputra/shortener/v1;shortenerv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service URLShortenerService {
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse) {
    option (google.api.http) = {
      post : "/v1/urls",
      body : "*"
    };
  }

  rpc GetAllURL(GetAllURLRequest) returns (GetAllURLResponse) {
    option (google.api.http) = {
      get : "/v1/urls"
    };
  }

  rpc StreamAllURL(StreamAllURLRequest) returns (stream StreamAllURLResponse) {
    option (google.api.http) = {
      get : "/v1/stream/urls"
    };
  }

  rpc GetURLDetail(GetURLDetailRequest) returns (GetURLDetailResponse) {
    option (google.api.http) = {
      get : "/v1/urls/{code}"
    };
  }
}

message CreateShortURLRequest {
  string original_url = 1;
}

message CreateShortURLResponse {
  URL url = 1;
}

message GetAllURLRequest {
}

message GetAllURLResponse {
  repeated URL urls = 1;
}

message StreamAllURLRequest {
}

message StreamAllURLResponse {
  URL url = 1;
}

message GetURLDetailRequest {
  string code = 1;
}

message GetURLDetailResponse {
  URL url = 1;
}

message URL {
  string code = 1;
  string short_url = 2;
  string original_url = 3;
  google.protobuf.Timestamp expired_at = 4;
  google.protobuf.Timestamp created_at = 5;
}